# quartermaster-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: release.yml  test.yml
docs/: architecture.md
scripts/: sync-dashboard-artifacts.sh
src/: analyzer.rs  art.rs  generator.rs  lib.rs  logo_ascii.md  scanner.rs  server.rs
static/assets/: dashboard-23Nbrx7O.js  dashboard-C0A_T7vw.css  dashboard-NBfTV2Dd.js  index-B9Qx9R3h.css  index-CyLDeX-8.css  index-D_LRQp72.js
static/dashboard/: index.html
